# PrecompiledShaderPipeline

./: .cmake-format.py  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  cso-build-install-llvm-windows.ps1  cso-build-install-macos.sh  cso-build-install-windows.ps1  cso-generate-scheme-macos.sh  cso-generate-scheme-windows.ps1  cso-install-local-cmake.ps1  cso-install-required-python-macos.sh  cso-install-required-python-windows.ps1  cso-macos-xcode-build-install.sh  cso-run-all-tests-macos.sh  cso-run-all-tests-windows.ps1  cso-update-binaries-macos.sh  cso-update-binaries-windows.ps1  format-files.sh
.github/workflows/: macos_main.yml  main.yml  windows_main.yml
.include/: cso_generated.h
assets/shaders/: SceneSkinned.vert  SceneSkinnedTest.vert  UScene.vert  Viewer.cso  Viewer.cso.json
include/: cso_generated.h
include/mutable_generated/: cso_generated.h
include/utils/: PrecompiledShaderPipelineUtils.h
schemes/: cso.fbs
src/: main.cpp
src/apemode/platform/: AppInput.cpp  AppState.cpp  AppState.h  CityHash.cpp  CityHash.h  IAssetManager.h
src/apemode/platform/memory/: MemoryManager.cpp
src/apemode/platform/memory/FluidStudios/MemoryManager/: mmgr.cpp
src/apemode/platform/sdl2/: AppMainSdl.cpp  AppSurfaceSdl.cpp  InputManagerSdl.cpp
src/apemode/platform/shared/: AssetManager.cpp  AssetManager.h
src/shaderc/: ShaderCompiler.Vulkan.cpp  ShaderCompiler.Vulkan.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerApp.cpp  main.cpp
tests/assets/shaders/: SceneSkinned8.vert  SceneSkinnedTest.vert  UScene.frag  Viewer.cso  Viewer.cso.h  Viewer.cso.json
tests/src/: main.cpp  test_embedded.cpp  test_main.cpp
